--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
     "description": "Interactive Process Mapper",
     "main": "dist/index.js",
     "scripts": {
-        "build": "tsc --pretty",
-        "watch": "tsc -w --pretty"
+        "tsc": "tsc --pretty",
+        "tsc:w": "tsc -w --pretty",
+        "build": "npm run tsc && npm run optim",
+        "build-windows": "npm run tsc && npm run optim-windows",
+        "optim": "r.js -o lib.build.js",
+        "optim-windows": "r.js.cmd -o lib.build.js"
     },
     "repository": {
         "type": "git",
@@ -18,6 +22,7 @@
     },
     "homepage": "https://github.com/jschaefer-io/TaskFlow#readme",
     "devDependencies": {
+        "requirejs": "^2.3.5",
         "typescript": "^2.8.3"
     },
     "dependencies": {
